Fixed some iheritance issues causing bad style, updated scaling of headshot to hopefully work better on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
     transition-duration: 0.2s;
 }
 
-a:hover {
+nav a:hover {
     color: hsl(350, 100%, 88%);
     text-decoration: underline;
     text-decoration-color: whitesmoke;
@@ -61,11 +61,12 @@ a:hover {
     justify-content: space-between;
     width: 100vw;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 .headshot {
     opacity: 0.7;
-    max-height: 80vh;
+    max-height: 100vh;
     max-width: 90vw;
     position: absolute;
     right: 0;
